--- a/css/news.css
+++ b/css/news.css
@@ -1,3 +1,7 @@
+.mod-news .newsblock ul {
+	list-style: none;
+	margin: 0;
+}
 .mod-news .newsblock h3 {
 	position: relative;
 }
@@ -5,36 +9,33 @@
 	position: absolute;
 	right: 0px;
 }
-.mod-news .tlnews h2 {
-	margin-right: 5px;
-}
-ul.lastnews li {
+.mod-news ul.lastnews li {
 	margin-bottom: 10px;
 }
-ul.lastnews a.title {
+.mod-news ul.lastnews a.title {
 	text-decoration: none;
 }
-ul.lastnews li.fullnews {
+.mod-news ul.lastnews li.fullnews {
 	text-align: right;
 }
-ul.lastnews .date {
+.mod-news ul.lastnews .date {
 	font-weight: bolder;
 	color:#81888F;
 }
-dl.newslist dt {
+.mod-news dl.newslist dt {
 	color:#81888F;
 	font-size:11px;
 }
-dl.newslist dt {
+.mod-news dl.newslist dt {
 	margin-bottom:3px;
 	padding-left:5px;
 }
-dl.newslist dd {
+.mod-news dl.newslist dd {
 	line-height:135%;
 	margin:0 0 25px;
 	padding-left: 5px;
 }
-dl.newslist a.title {
+.mod-news dl.newslist a.title {
 	font-size: 110%;
 	font-weight: bolder;
 	text-decoration: none;
