--- a/src/css/news.css
+++ b/src/css/news.css
@@ -1,42 +1,44 @@
-.mod-news .newsblock ul {
-	list-style: none;
-	margin: 0;
+.mod-news .newsblock {
+    font-size: 13.5px;
 }
 .mod-news .newsblock h3 {
-	position: relative;
+    position: relative;
+}
+.mod-news .newsblock p {
+    margin: 0;
 }
 .mod-news .newsblock .rssicon {
-	position: absolute;
-	right: 0px;
+    position: absolute;
+    right: 0px;
 }
-.mod-news ul.lastnews li {
-	margin-bottom: 10px;
+.mod-news .lastnews .newsrow {
+    margin-bottom: 10px;
 }
-.mod-news ul.lastnews a.title {
-	text-decoration: none;
+.mod-news .lastnews a.title {
+    text-decoration: none;
 }
-.mod-news ul.lastnews li.fullnews {
-	text-align: right;
+.mod-news .lastnews .fullnews {
+    text-align: right;
 }
-.mod-news ul.lastnews .date {
-	font-weight: bolder;
-	color:#81888F;
-}
-.mod-news dl.newslist dt {
-	color:#81888F;
-	font-size:11px;
+.mod-news .lastnews .date {
+    font-weight: bolder;
+    color:#81888F;
 }
 .mod-news dl.newslist dt {
-	margin-bottom:3px;
-	padding-left:5px;
+    color:#81888F;
+    font-size:11px;
+}
+.mod-news dl.newslist dt {
+    margin-bottom:3px;
+    padding-left:5px;
 }
 .mod-news dl.newslist dd {
-	line-height:135%;
-	margin:0 0 25px;
-	padding-left: 5px;
+    line-height:135%;
+    margin:0 0 25px;
+    padding-left: 5px;
 }
 .mod-news dl.newslist a.title {
-	font-size: 110%;
-	font-weight: bolder;
-	text-decoration: none;
+    font-size: 110%;
+    font-weight: bolder;
+    text-decoration: none;
 }
